k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PROJECT_NAME}
  namespace: ${KUBE_NAMESPACE}
spec:
  ports:
  - port: ${PORT_NUMBER}
    targetPort: ${PORT_NUMBER}
    protocol: TCP
    name: http
  selector:
    app: ${CI_PROJECT_NAME}
