k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-http-private
  creationTimestamp: null
  name: ${CI_PROJECT_NAME}-ingress-nginx
  namespace: ${KUBE_NAMESPACE}
spec:
  rules:
  - host: ${CI_PROJECT_NAME}.${ENDPOINT}
    http:
      paths:
      - backend:
          service:
            name: ${CI_PROJECT_NAME}
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
